Fixed a bug when the text inside divs was not centered

--- a/src/components/css/sidebar.css
+++ b/src/components/css/sidebar.css
@@ -30,8 +30,8 @@
 }
 
 .sidebar__item {
-  padding-top: 6px;
   height: 40px;
+  line-height: 40px;
   border-radius: 30px;
 }
 
